chore: code cleanup (#278)